[package]
name = "dmclc5"
version = "0.1.0"
edition = "2021"

[dependencies]
acc_reader = { version = "2.0.0", optional = true }
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
erased-serde = "0.4.5"
form_urlencoded = { version = "1.2.1", optional = true }
fs_extra = { version = "1.3.0", optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", features = ["io"] }
map-macro = "0.3.0"
markdown-it = { version = "0.6.1", optional = true }
md5 = "0.7.0"
murmur2 = { version = "0.1.0", optional = true }
open = { version = "5.1.3", optional = true }
osstrtools = "0.2.2"
reqwest = { version = "0.12.4", features = ["blocking", "json", "stream"] }
rust-i18n = "3.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = { version = "0.1.19", optional = true }
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = { version = "3", optional = true }
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "process"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
toml = { version = "0.8.19", optional = true }
uuid = { version = "1.4.0", features = ["serde"] }
versions = { version = "6.3.0", features = ["serde"], optional = true }
xmltree = { version = "0.10.3", optional = true }
zip = "2.1.3"

[features]
components_installation = ["dep:form_urlencoded", "dep:fs_extra", "dep:tempfile", "dep:xmltree"]
mod_loaders = ["components_installation", "dep:acc_reader", "dep:toml", "dep:versions"]
content_services = ["dep:futures", "dep:markdown-it", "dep:murmur2", "dep:serde_repr"]
msa_auth = ["dep:open"]

[[example]]
name = "basic_minecraft"
path = "examples/minecraft.rs"

[[example]]
name = "contents"
path = "examples/contents.rs"
required-features = ["content_services"]

[[example]]
name = "mod_loaders"
path = "examples/mod_loader.rs"
required-features = ["mod_loaders"]
