[package]
name = "dmclc5"
version = "0.2.2"
authors = ["heipiao233"]
edition = "2021"
description = "A minecraft launching library"
documentation = "https://docs.rs/dmclc5"
license = "GPL-3.0"
repository = "https://github.com/heipiao233/dmclc5"

[dependencies]
acc_reader = { version = "2", optional = true }
anyhow = "1"
async-fetcher = "0.11.0"
async-trait = "0.1"
base64 = "0.22"
erased-serde = "0.4"
form_urlencoded = { version = "1", optional = true }
fs_extra = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", features = ["io"] }
map-macro = "0.3"
markdown-it = { version = "0.6", optional = true }
md5 = "0.7"
murmur2 = { version = "0.1", optional = true }
open = { version = "5", optional = true }
osstrtools-fix = "0.2.3"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = { version = "0.1", optional = true }
sha1 = "0.10"
sha2 = "0.10"
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "io-std", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = { version = "0.8", optional = true }
uuid = { version = "1", features = ["serde"] }
versions = { version = "6", features = ["serde"], optional = true }
xmltree = { version = "0.10", optional = true }
zip = "2"

[features]
components_installation = ["dep:form_urlencoded", "dep:fs_extra", "dep:tempfile", "dep:xmltree"]
mod_loaders = ["components_installation", "dep:acc_reader", "dep:toml", "dep:versions"]
content_services = ["dep:futures", "dep:markdown-it", "dep:murmur2", "dep:serde_repr"]
msa_auth = ["dep:open"]

[[example]]
name = "basic_minecraft"
path = "examples/minecraft.rs"

[[example]]
name = "contents"
path = "examples/contents.rs"
required-features = ["content_services"]

[[example]]
name = "mod_loaders"
path = "examples/mod_loader.rs"
required-features = ["mod_loaders"]
